--- a/expro.html
+++ b/expro.html
@@ -65,40 +65,32 @@
     </div>
 
     <!-- End Hero -->
-    <!-- Info -->
-    <div class="info" id="works">
-      <div class="container">
-        <div class="content">
-          <div>
-            <span class="num">01</span>
-            <h3>Registration</h3>
-            <h2>Sign up and fill your application form</h2>
-          </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- End Info -->
 
     <!-- Details -->
     <div class="details">
       <div class="container">
+        <div class="content rights">
+          <div class="det">
+            <h3>Registration</h3>
+            <h2>Sign up and fill in the application form</h2>
+          </div>
+          <div class="img sd">
+            <img src="img/register.jpg" alt="Email confirmation" />
+          </div>
+        </div>
         <div class="content lefts">
           <div class="img">
-            <img src="img/mail.jpg" alt="Email confirmation" />
+            <img src="img/mail.jpg" alt="Email communication" />
           </div>
           <div class="det">
-            <span class="num">02</span>
-            <h3>Introduction</h3>
-            <h2>Our team will send you and email confirmation</h2>
+            <h3>Email Communication</h3>
+            <h2>Keep an eye on your email until you become an active member</h2>
           </div>
         </div>
         <div class="content rights">
           <div class="det">
-            <span class="num">03</span>
             <h3>Training</h3>
-            <h2>Our team will explain more about us and answer the questions you might have</h2>
+            <h2>Our team will invite you to a training session that fits your schedule to learn more about our products and how to sell them</h2>
           </div>
           <div class="img">
             <img src="img/question.jpg" alt="Question" />
@@ -109,10 +101,28 @@
             <img src="img/promo.jpg" alt="promo code" />
           </div>
           <div class="det">
-            <span class="num">04</span>
-            <h3>Earn money</h3>
-            <h2>Activate your customized Promo code &amp; Boost your income</h2>
+            <h3>Personalized promo code</h3>
+            <h2>You can personalize your own promo code to share with your friends, family and others</h2>
           </div>
+        </div>
+        <div class="content rights">
+          <div class="det">
+            <h3>Start Selling!</h3>
+            <h2>You'll earn money with each sold item using your promo code</h2>
+          </div>
+          <div class="img sd">
+            <img src="img/income1.jpg" alt="income" />
+          </div>
+        </div>
+        <div class="content lefts">
+          <div class="img sd">
+            <img src="img/monitor.jpg" alt="Question" />
+          </div>
+          <div class="det">
+            <h3>Monitor your sales</h3>
+            <h2>Review your daily sales on your personalized visual dashboard</h2>
+          </div>
+          
         </div>
       </div>
     </div>
