--- a/expro.html
+++ b/expro.html
@@ -57,7 +57,7 @@
                 Learn more about the program!</b>
             </h3>
             <div class="cta">
-              <a href="#works">How does it work</a>
+              <a href="#works">How it works</a>
             </div>
           </div>
         </div>
@@ -67,7 +67,7 @@
     <!-- End Hero -->
 
     <!-- Details -->
-    <div class="details">
+    <div class="details" id="works">
       <div class="container">
         <div class="content rights">
           <div class="det">
@@ -83,7 +83,7 @@
             <img src="img/mail.jpg" alt="Email communication" />
           </div>
           <div class="det">
-            <h3>Email Communication</h3>
+            <h3>Acceptance Email</h3>
             <h2>Keep an eye on your email until you become an active member</h2>
           </div>
         </div>
