--- a/expro-ar.html
+++ b/expro-ar.html
@@ -55,7 +55,7 @@
               </h1>
               <h3>
                 برنامج كاش هو برنامج حوافز تقدمه يورك عشان نساعدك  تزود دخلك 
-<br><b> متفوتش الفرصة خذلك فرّه على البرنامج! </b>
+<br><b> لا تفوتك الفرصة، خذلك فرّه على البرنامج! </b>
 
               </h3>
               <div class="cta">
@@ -92,7 +92,7 @@
           <div class="content rights">
             <div class="det">
               <h3>دورة تدريبية</h3>
-              <h2> حيعزمك فريقنا على دورة تدريبية تناسب جدولك نعرفك فيها على منتجاتنا و كيف تبيعها</h2>
+              <h2> حيعزمك فريقنا على دورة تدريبية تناسب جدولك نعرّفك فيها على منتجاتنا و كيف تبيعها</h2>
             </div>
             <div class="img">
               <img src="img/question.jpg" alt="Question" />
@@ -103,8 +103,8 @@
               <img src="img/promo.jpg" alt="promo code" />
             </div>
             <div class="det">
-              <h3>برومو كودك الشخصى</h3>
-              <h2>تقدر تختار برومو كودك اللى حتوزعه على اصحابك و عيلتك وغيرهم</h2>
+              <h3>برومو كودك الشخصي</h3>
+              <h2>تقدر تختار برومو كودك اللى حتوزعه على أصحابك و عيلتك وغيرهم</h2>
             </div>
           </div>
           <div class="content rights">
@@ -121,7 +121,7 @@
               <img src="img/monitor.jpg" alt="Question" />
             </div>
             <div class="det">
-              <h3>تفرج و تابع مبيعاتك</h3>
+              <h3> تابع مبيعاتك</h3>
               <h2>تابع مبيعاتك اليومية من خلال لوحة التحكم الخاصة فيك</h2>
             </div>
             
