--- a/expro-ar.html
+++ b/expro-ar.html
@@ -86,13 +86,13 @@
             </div>
             <div class="det">
               <h3>رسالة القبول</h3>
-              <h2>خل عينك على ايميلاتك لين ربي يفرجها</h2>
+              <h2>خلي عينك على ايميلاتك لين تصير عضو في البرنامج</h2>
             </div>
           </div>
           <div class="content rights">
             <div class="det">
               <h3>دورة تدريبية</h3>
-              <h2> حيعزمك فريقنا على دورة تدريبية تناسب جدولك نعرّفك فيها على منتجاتنا و كيف تبيعها</h2>
+              <h2> حيتواصل معاك فريقنا لتحديد موعد الدورة التدريبية اللي تناسب جدولك نعرّفك فيها على منتجاتنا و كيف تبيعها</h2>
             </div>
             <div class="img">
               <img src="img/question.jpg" alt="Question" />
@@ -104,7 +104,7 @@
             </div>
             <div class="det">
               <h3>برومو كودك الشخصي</h3>
-              <h2>تقدر تختار برومو كودك اللى حتوزعه على أصحابك و عيلتك وغيرهم</h2>
+              <h2>تقدر تختار برومو كودك اللي حتوزعه على أصحابك و عيلتك وغيرهم</h2>
             </div>
           </div>
           <div class="content rights">
@@ -121,8 +121,8 @@
               <img src="img/monitor.jpg" alt="Question" />
             </div>
             <div class="det">
-              <h3> تابع مبيعاتك</h3>
-              <h2>تابع مبيعاتك اليومية من خلال لوحة التحكم الخاصة فيك</h2>
+              <h3>  تابع مبيعاتك وأرباحك</h3>
+              <h2>تابع مبيعاتك وأرباحك اليومية من خلال لوحة التحكم الخاصة فيك</h2>
             </div>
             
           </div>
