--- a/expro-ar.html
+++ b/expro-ar.html
@@ -44,7 +44,7 @@
       <!-- End Nav -->
   
       <!-- Hero -->
-      <div class="hero">
+      <div class="hero ar">
         <div class="container">
           <div class="content">
             <div>
@@ -59,7 +59,7 @@
 
               </h3>
               <div class="cta">
-                <a href="#works">كيف تبدأ</a>
+                <a href="#">انضم الآن</a>
               </div>
             </div>
           </div>
@@ -150,6 +150,10 @@
       <div class="footer">
         <div class="container">
           <div class="content">
+            <div class="logo">
+              <img src="img/logo.png" alt="Al Salem Johnson Controls logo"
+               />
+             </div>
             <p>© 2021 ال سالم جونسون كنترولز. جميع الحقوق محفوظة</p>
           </div>
         </div>
