--- a/expro-ar.html
+++ b/expro-ar.html
@@ -86,6 +86,24 @@
                 >
               </button>
             </div>
+            <div class="sub-nav">
+              <button class="subnavbtn">
+                <a href="expro.html"
+                  ><img
+                    src="https://kash.york.com.sa/assets/images/flags/us.png"
+                    alt="English"
+                /></a>
+              </button>
+            </div>
+            <div class="sub-nav">
+              <button class="subnavbtn">
+                <a href="expro-ar.html"
+                  ><img
+                    src="https://kash.york.com.sa/assets/images/flags/sa.png"
+                    alt="Arabic"
+                /></a>
+              </button>
+            </div>
           </div>
         </div>
       </div>
@@ -164,6 +182,20 @@
                 target="_blank"
               >
                 تسجيل دخول
+              </a>
+            </li>
+            <li class="nav-item flags">
+              <a class="nav-link" href="expro.html">
+                <img
+                  src="https://kash.york.com.sa/assets/images/flags/us.png"
+                  alt="English"
+                />
+              </a>
+              <a class="nav-link" href="expro-ar.html">
+                <img
+                  src="https://kash.york.com.sa/assets/images/flags/sa.png"
+                  alt="Arabic"
+                />
               </a>
             </li>
           </ul>
