--- a/expro-ar.html
+++ b/expro-ar.html
@@ -537,8 +537,8 @@
               <img src="img/10.svg" alt="Age/ Nationality" />
             </div>
             <div class="more">
-              <h3>العمر و الجنسية</h3>
-              <p>الجنسية السعودية / لا يقل عن ١٦ سنة</p>
+              <h3>الجنسية</h3>
+              <p>الجنسية السعودية</p>
             </div>
           </div>
           <div class="cons">
