--- a/expro.html
+++ b/expro.html
@@ -551,8 +551,8 @@
               <img src="img/10.svg" alt="" />
             </div>
             <div class="more">
-              <h3>Age/ Nationality</h3>
-              <p>Saudi Nation/ Not less than 16 years</p>
+              <h3>Nationality</h3>
+              <p>Saudi Nation</p>
             </div>
           </div>
           <div class="cons">
