--- a/expro-ar.html
+++ b/expro-ar.html
@@ -326,7 +326,9 @@
             <div class="ps-bot">
               <div class="more">
                 <h3>تابع مبيعاتك</h3>
-                <p>في أي وقت ومكان، عبر حسابك الالكتروني معنا.</p>
+                <p>
+                  في أي وقت و مكان، عبر منصة بياناتك الخاصة بالدخول على حسابك
+                </p>
               </div>
             </div>
             <span class="ps-sp-top"></span>
@@ -338,7 +340,9 @@
             <div class="ps-bot">
               <div class="more">
                 <h3>ابدأ البيع</h3>
-                <p>الربح جهتين .. لأصحابك خصم يورك، ولك نسبتك!</p>
+                <p>
+                  اضرب عصفوريين بحجر! لك عمولة و لهم خصم خاص على منتجات يورك.
+                </p>
               </div>
             </div>
             <span class="ps-sp-top"></span>
@@ -350,7 +354,7 @@
             <div class="ps-bot">
               <div class="more">
                 <h3>رمزك الترويجي</h3>
-                <p>صمم بنفسك رمزك الترويجي الذي ستوزعه على أصحابك وعملائك.</p>
+                <p>صمم رمزك الترويجي الخاص اللي حتوزّعه على أهلك و عملائك</p>
               </div>
             </div>
             <span class="ps-sp-top"></span>
@@ -376,8 +380,8 @@
             </div>
             <div class="ps-bot">
               <div class="more">
-                <h3>رمزك الترويجي</h3>
-                <p>يشرفنا إرسال ”رسالة قبول“ على بريدك الالكتروني.</p>
+                <h3>رسالة القبول</h3>
+                <p>سيتم إرسال رسالة بحالة طلبك ورمزك الترويجي حال قبولك</p>
               </div>
             </div>
             <span class="ps-sp-top"></span>
@@ -388,8 +392,8 @@
             </div>
             <div class="ps-bot">
               <div class="more">
-                <h3>سجل معنا</h3>
-                <p>سجل بياناتك من خانة ”انضم الآن“.</p>
+                <h3>سجّل</h3>
+                <p>سجّل بياناتك بالضغط على "انضم الآن"</p>
               </div>
             </div>
             <span class="ps-sp-top"></span>
@@ -405,8 +409,8 @@
               <img src="img/4.svg" alt="Create Account" />
             </div>
             <div class="more">
-              <h3>سجل معنا</h3>
-              <p>سجل بياناتك من خانة ”انضم الآن“.</p>
+              <h3>سجّل</h3>
+              <p>سجّل بياناتك بالضغط على "انضم الآن"</p>
             </div>
           </div>
           <div class="cons">
@@ -414,8 +418,8 @@
               <img src="img/5.svg" alt="Acceptance Email" />
             </div>
             <div class="more">
-              <h3>رسالة قبول</h3>
-              <p>يشرفنا إرسال ”رسالة قبول“ على بريدك الالكتروني.</p>
+              <h3>رسالة القبول</h3>
+              <p>سيتم إرسال رسالة بحالة طلبك ورمزك الترويجي حال قبولك</p>
             </div>
           </div>
           <div class="cons">
@@ -436,7 +440,7 @@
             </div>
             <div class="more">
               <h3>رمزك الترويجي</h3>
-              <p>صمم بنفسك رمزك الترويجي الذي ستوزعه على أصحابك وعملائك.</p>
+              <p>صمم رمزك الترويجي الخاص اللي حتوزّعه على أهلك و عملائك</p>
             </div>
           </div>
           <div class="cons">
@@ -445,7 +449,7 @@
             </div>
             <div class="more">
               <h3>ابدأ البيع</h3>
-              <p>الربح جهتين .. لأصحابك خصم يورك، ولك نسبتك!</p>
+              <p>اضرب عصفوريين بحجر! لك عمولة و لهم خصم خاص على منتجات يورك.</p>
             </div>
           </div>
           <div class="cons">
@@ -454,7 +458,7 @@
             </div>
             <div class="more">
               <h3>تابع مبيعاتك</h3>
-              <p>في أي وقت ومكان، عبر حسابك الالكتروني معنا.</p>
+              <p>في أي وقت و مكان، عبر منصة بياناتك الخاصة بالدخول على حسابك</p>
             </div>
           </div>
         </div>
@@ -467,7 +471,7 @@
       <div class="container">
         <div class="content cs">
           <div class="cta">
-            <a href="https://kash.york.com.sa/register">سجل الآن</a>
+            <a href="https://kash.york.com.sa/register">انضم الآن</a>
           </div>
         </div>
       </div>
@@ -493,7 +497,7 @@
             </div>
             <div class="more">
               <h3>استقلالية مالية</h3>
-              <p>مع مصدر دخل مالي أساسي أو جانبي</p>
+              <p>كمصدر دخل مالي أساسي أو جانبي</p>
             </div>
           </div>
           <div class="cons">
@@ -502,7 +506,9 @@
             </div>
             <div class="more">
               <h3>مرونة عالية</h3>
-              <p>اختر بنفسك أوقات وأماكن عملك</p>
+              <p>
+                اختر ساعات و مكان عملك و اقضي باقي وقتك بالأشياء اللي تحبّها
+              </p>
             </div>
           </div>
           <div class="cons">
@@ -510,8 +516,10 @@
               <img src="img/14.svg" alt="COMMUNITY" />
             </div>
             <div class="more">
-              <h3>تواصل اجتماعي</h3>
-              <p>كن جزءًا من مجتمعنا الكبير واحصل على فرصة لمقابلة أشخاص جدد</p>
+              <h3>مجتمعك الخاص</h3>
+              <p>
+                كن جزءًا من مجتمعنا الكبير واحصل على فرصة توسيع شبكتك الاجتماعية
+              </p>
             </div>
           </div>
         </div>
@@ -538,7 +546,7 @@
             </div>
             <div class="more">
               <h3>الجنسية</h3>
-              <p>الجنسية السعودية</p>
+              <p>جنسية سعودية</p>
             </div>
           </div>
           <div class="cons">
@@ -547,7 +555,7 @@
             </div>
             <div class="more">
               <h3>هوية</h3>
-              <p>سارية المفعول</p>
+              <p>هويّة سارية المفعول</p>
             </div>
           </div>
           <div class="cons">
@@ -555,8 +563,8 @@
               <img src="img/12.svg" alt="Bank Account" />
             </div>
             <div class="more">
-              <h3>حساب بنك</h3>
-              <p>حساب في بنك محلي حتى يمكننا تحويل عمولاتك.</p>
+              <h3>حساب مصرفي محلّي</h3>
+              <p>حساب مصرفي في بنك محلّي لتحويل عمولاتك</p>
             </div>
           </div>
           <div class="cons">
@@ -777,21 +785,6 @@
             <div class="input-box">
               <textarea required=""></textarea>
               <span class="tes">ملاحظات*</span>
-            </div>
-
-            <div class="input-box policy">
-              <div class="checkbox-wrap">
-                <div class="checkbox">
-                  <input
-                    type="checkbox"
-                    id="policy"
-                    name="policy"
-                    required=""
-                  />
-                  <label for="policy">أوافق علي الشروط والاحكام </label>
-                  <div class="check"></div>
-                </div>
-              </div>
             </div>
             <div class="input-box">
               <input type="submit" value="أرسل" />
