--- a/faq.html
+++ b/faq.html
@@ -209,418 +209,8 @@
 
     <!-- End Mobile Nav -->
 
-    <!-- Hero -->
-    <!-- Video -->
-    <div class="video">
-      <video muted autoplay class="video-container" loop>
-        <source src="img/video.mp4" type="video/mp4" />
-      </video>
-      <div class="wrapper">
-        <div class="container">
-          <div class="set-color">
-            <div class="content">
-              <h1>
-                Join Our Family <br />
-                Boost your income…
-              </h1>
-              <p class="wid">
-                Kash Program is an incentive program brought by York to help you
-                Boost Your income and Make more money. Don’t Miss the Chance &
-                Learn more about the program!
-              </p>
-              <div class="play">
-                <div class="play-icon">
-                  <svg
-                    width="8px"
-                    height="10px"
-                    viewBox="0 0 8 10"
-                    version="1.1"
-                    xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink"
-                  >
-                    <g
-                      stroke="none"
-                      stroke-width="1"
-                      fill="none"
-                      fill-rule="evenodd"
-                    >
-                      <g
-                        transform="translate(-225.000000, -383.000000)"
-                        fill="#FFFFFF"
-                      >
-                        <polygon
-                          transform="translate(229.000000, 388.000000) rotate(-270.000000) translate(-229.000000, -388.000000) "
-                          points="229 384 234 392 224 392"
-                        ></polygon>
-                      </g>
-                    </g>
-                  </svg>
-                </div>
-                <p>Watch Video</p>
-                <a href="https://kash.york.com.sa/register" target="_blank"
-                  >Join Now</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- End Video -->
-
-    <!-- Watch Video -->
-    <div class="watch">
-      <div class="wrapper">
-        <div class="close-video">
-          <img src="img/icon-close.svg" alt="close" />
-        </div>
-        <div class="container">
-          <div class="content">
-            <div class="video-co">
-              <video class="video-play" width="900" height="600" controls>
-                <source src="img/video.mp4" type="video/mp4" />
-              </video>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- End Watch Video -->
-
-    <!-- End Hero -->
-
     <!-- Join -->
-    <div class="join" id="kash-head">
-      <div class="content">
-        <h2>About Kash Program</h2>
-      </div>
-    </div>
-    <!-- End Join -->
-
-    <!-- About  -->
-    <div class="about">
-      <div class="container">
-        <div class="content">
-          <p>
-            Kash program is a sales incentive program brought by York to give
-            you the opportunity to become you own boss and increase your income.
-            You can share your customized promo-code to generate sales. With
-            every product sold using your promo-code you’ll receive an
-            incentive.
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <!-- About -->
-    <!-- Join -->
-    <div class="join" id="works-head">
-      <div class="content">
-        <h2>How it works?</h2>
-      </div>
-    </div>
-    <!-- End Join -->
-    <!-- How -->
-    <section class="ps-timeline-sec">
-      <div class="container">
-        <ol class="ps-timeline">
-          <li>
-            <div class="img-handler-top">
-              <img src="img/4.svg" alt="Create Account" />
-            </div>
-            <div class="ps-bot">
-              <div class="more">
-                <h3>Register</h3>
-                <p>Fill in you information by clicking "Join Now"</p>
-              </div>
-            </div>
-            <span class="ps-sp-top"></span>
-          </li>
-          <li>
-            <div class="img-handler-top">
-              <img src="img/5.svg" alt="Acceptance Email" />
-            </div>
-            <div class="ps-bot">
-              <div class="more">
-                <h3>Acceptance Email</h3>
-                <p>
-                  An email with your application status will be sent along with
-                  your promo code when accepted.
-                </p>
-              </div>
-            </div>
-            <span class="ps-sp-top"></span>
-          </li>
-          <li>
-            <div class="img-handler-top">
-              <img src="img/6.svg" alt="Virtual Training" />
-            </div>
-            <div class="ps-bot">
-              <div class="more">
-                <h3>Virtual Training</h3>
-                <p>Short Quick Training session to learn about our program</p>
-              </div>
-            </div>
-            <span class="ps-sp-top"></span>
-          </li>
-          <li>
-            <div class="img-handler-top">
-              <img src="img/7.svg" alt="Promo code" />
-            </div>
-            <div class="ps-bot">
-              <div class="more">
-                <h3>Promo code</h3>
-                <p>
-                  Choose your own Promo Code to share with your family and
-                  clients
-                </p>
-              </div>
-            </div>
-            <span class="ps-sp-top"></span>
-          </li>
-          <li>
-            <div class="img-handler-top">
-              <img src="img/8.svg" alt="Start Selling" />
-            </div>
-            <div class="ps-bot">
-              <div class="more">
-                <h3>Start Selling</h3>
-                <p>
-                  Hit two birds with one stone! An incentive for you and a
-                  special discount for them from YORK
-                </p>
-              </div>
-            </div>
-            <span class="ps-sp-top"></span>
-          </li>
-          <li>
-            <div class="img-handler-top">
-              <img src="img/9.svg" alt="Monitor your Sales" />
-            </div>
-            <div class="ps-bot">
-              <div class="more">
-                <h3>Monitor your Sales</h3>
-                <p>
-                  At any time & place, monitor your sales using your customized
-                  dashboard by signing in to your account.
-                </p>
-              </div>
-            </div>
-            <span class="ps-sp-top"></span>
-          </li>
-        </ol>
-      </div>
-    </section>
-    <div class="why us mob">
-      <div class="container">
-        <div class="content">
-          <div class="cons">
-            <div class="img">
-              <img src="img/4.svg" alt="Create Account" />
-            </div>
-            <div class="more">
-              <h3>Register</h3>
-              <p>Fill in you information by clicking "Join Now"</p>
-            </div>
-          </div>
-          <div class="cons">
-            <div class="img">
-              <img src="img/5.svg" alt="Acceptance Email" />
-            </div>
-            <div class="more">
-              <h3>Acceptance Email</h3>
-              <p>
-                An email with your application status will be sent along with
-                your promo code when accepted.
-              </p>
-            </div>
-          </div>
-          <div class="cons">
-            <div class="img">
-              <img src="img/6.svg" alt="Virtual Training" />
-            </div>
-            <div class="more">
-              <h3>Virtual Training</h3>
-              <p>Short Quick Training session to learn about our program</p>
-            </div>
-          </div>
-          <div class="cons">
-            <div class="img">
-              <img src="img/7.svg" alt="Promo code" />
-            </div>
-            <div class="more">
-              <h3>Promo code</h3>
-              <p>
-                Choose your own Promo Code to share with your family and clients
-              </p>
-            </div>
-          </div>
-          <div class="cons">
-            <div class="img">
-              <img src="img/8.svg" alt="Start Selling" />
-            </div>
-            <div class="more">
-              <h3>Start Selling</h3>
-              <p>
-                Hit two birds with one stone! An incentive for you and a special
-                discount for them from YORK
-              </p>
-            </div>
-          </div>
-          <div class="cons">
-            <div class="img">
-              <img src="img/9.svg" alt="Monitor your Sales" />
-            </div>
-            <div class="more">
-              <h3>Monitor your Sales</h3>
-              <p>
-                At any time & place, monitor your sales using your customized
-                dashboard by signing in to your account.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- End How -->
-
-    <!-- Info -->
-    <div class="info">
-      <div class="container">
-        <div class="content cs">
-          <div class="cta">
-            <a href="https://kash.york.com.sa/register">Join Now</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- End Info -->
-
-    <!-- Join -->
-    <div class="join" id="in-head">
-      <div class="content">
-        <h2>What’s in it for you?</h2>
-      </div>
-    </div>
-    <!-- End Join -->
-
-    <!-- Why -->
-    <div class="why">
-      <div class="container">
-        <div class="content">
-          <div class="cons">
-            <div class="img">
-              <img src="img/2.svg" alt="FINANCIALLY INDEPENDENT" />
-            </div>
-            <div class="more">
-              <h3>FINANCIALLY INDEPENDENT</h3>
-              <p>
-                With Kash program you are your own boss, manage your own time
-                and earn extra income.
-              </p>
-            </div>
-          </div>
-          <div class="cons">
-            <div class="img">
-              <img src="img/1.svg" alt="FLEXIBILITY" />
-            </div>
-            <div class="more">
-              <h3>FLEXIBILITY</h3>
-              <p>
-                Choose your own hours, work from where you want and enjoy doing
-                the things you love.
-              </p>
-            </div>
-          </div>
-          <div class="cons">
-            <div class="img">
-              <img src="img/14.svg" alt="COMMUNITY" />
-            </div>
-            <div class="more">
-              <h3>YOUR OWN COMMUNITY</h3>
-              <p>
-                Be apart of our big community & get a chance to expand your
-                social network!
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- End Why -->
-
-    <!-- Join -->
-    <div class="join" id="am-head">
-      <div class="content">
-        <h2>Am I Eligible?</h2>
-      </div>
-    </div>
-    <!-- End Join -->
-
-    <!-- Why -->
-    <div class="why us">
-      <div class="container">
-        <div class="content">
-          <div class="cons">
-            <div class="img">
-              <img src="img/10.svg" alt="" />
-            </div>
-            <div class="more">
-              <h3>Nationality</h3>
-              <p>Saudi National</p>
-            </div>
-          </div>
-          <div class="cons">
-            <div class="img">
-              <img src="img/11.svg" alt="" />
-            </div>
-            <div class="more">
-              <h3>ID</h3>
-              <p>Valid National ID</p>
-            </div>
-          </div>
-          <div class="cons">
-            <div class="img">
-              <img src="img/12.svg" alt="" />
-            </div>
-            <div class="more">
-              <h3>Local Bank Account</h3>
-              <p>Local Bank account to transfer your incentives</p>
-            </div>
-          </div>
-          <div class="cons">
-            <div class="img">
-              <img src="img/13.svg" alt="" />
-            </div>
-            <div class="more">
-              <h3>Passion & Commitment</h3>
-              <p>Get ready to make more money .</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- End Why -->
-    <!-- Info -->
-    <div class="info">
-      <div class="container">
-        <div class="content cs">
-          <div class="cta">
-            <a href="https://kash.york.com.sa/register">Join Now</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- End Info -->
-
-    <!-- Join -->
-    <div class="join" id="faq-head">
+    <div class="join" style="margin-top: 80px">
       <div class="content">
         <h2>FAQ</h2>
       </div>
@@ -794,66 +384,6 @@
 
     <!-- End FAQ -->
 
-    <!-- Join -->
-    <div class="join" id="contact-head">
-      <div class="content">
-        <h2>Contact us</h2>
-      </div>
-    </div>
-    <!-- End Join -->
-
-    <!-- Contact -->
-    <div class="contact">
-      <div class="container">
-        <div class="formbox">
-          <form>
-            <div class="input-box">
-              <input type="text" required="" />
-              <span>First Name*</span>
-            </div>
-            <div class="input-box">
-              <input type="text" required="" />
-              <span>Last Name*</span>
-            </div>
-            <div class="input-box">
-              <input type="text" required="" />
-              <span>Email*</span>
-            </div>
-            <div class="input-box">
-              <input type="number" required="" />
-              <span>Phone Number</span>
-            </div>
-            <div class="input-box">
-              <textarea required=""></textarea>
-              <span class="tes">Message*</span>
-            </div>
-
-            <div class="input-box policy">
-              <div class="checkbox-wrap">
-                <div class="checkbox">
-                  <input
-                    type="checkbox"
-                    id="policy"
-                    name="policy"
-                    required=""
-                  />
-                  <label for="policy"
-                    >I agree to the terms and conditions
-                  </label>
-                  <div class="check"></div>
-                </div>
-              </div>
-            </div>
-            <div class="input-box">
-              <input type="submit" value="Send" />
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-
-    <!-- End Contact -->
-
     <!-- Footer -->
     <div class="footer">
       <div class="container">
@@ -862,7 +392,7 @@
             <img src="img/logo.png" alt="Al Salem Johnson Controls logo" />
           </div>
           <div class="social">
-            <h4>FOLLOW US</h4>
+            <h4>Follow Us</h4>
             <div class="icons">
               <a href="https://www.facebook.com/yorkksa" target="_blank"
                 ><img src="img/facebook.svg" alt="facebook"
@@ -893,6 +423,23 @@
     </div>
 
     <!-- End Footer -->
+    <script>
+      const items = document.querySelectorAll(".accordion button");
+
+      function toggleAccordion() {
+        const itemToggle = this.getAttribute("aria-expanded");
+
+        for (i = 0; i < items.length; i++) {
+          items[i].setAttribute("aria-expanded", "false");
+        }
+
+        if (itemToggle == "false") {
+          this.setAttribute("aria-expanded", "true");
+        }
+      }
+
+      items.forEach((item) => item.addEventListener("click", toggleAccordion));
+    </script>
     <script src="app.js"></script>
   </body>
 </html>
