--- a/expro-ar.html
+++ b/expro-ar.html
@@ -80,7 +80,7 @@
               </button>
             </div>
             <div class="sub-nav">
-              <button class="subnavbtn">
+              <button class="subnavbtn cta">
                 <a href="https://kash.york.com.sa/login" target="_blank"
                   >تسجيل دخول</a
                 >
@@ -349,39 +349,24 @@
           </li>
           <li>
             <div class="img-handler-top">
-              <img src="img/7.svg" alt="Promo code" />
-            </div>
-            <div class="ps-bot">
-              <div class="more">
-                <h3>رمزك الترويجي</h3>
-                <p>صمم رمزك الترويجي الخاص اللي حتوزّعه على أهلك و عملائك</p>
-              </div>
-            </div>
-            <span class="ps-sp-top"></span>
-          </li>
-          <li>
-            <div class="img-handler-top">
-              <img src="img/6.svg" alt="Virtual Training" />
-            </div>
-            <div class="ps-bot">
-              <div class="more">
-                <h3>دورة سريعة</h3>
-                <p>
-                  يسعدنا انضمامك! سيتواصل بك زميلك لموعد دورة تدريبية يناسب
-                  وقتك، تعرّفك على منتجاتنا وطرق بيعها.
-                </p>
-              </div>
-            </div>
-            <span class="ps-sp-top"></span>
-          </li>
-          <li>
-            <div class="img-handler-top">
               <img src="img/5.svg" alt="Acceptance Email" />
             </div>
             <div class="ps-bot">
               <div class="more">
                 <h3>رسالة القبول</h3>
                 <p>سيتم إرسال رسالة بحالة طلبك ورمزك الترويجي حال قبولك</p>
+              </div>
+            </div>
+            <span class="ps-sp-top"></span>
+          </li>
+          <li>
+            <div class="img-handler-top">
+              <img src="img/7.svg" alt="Promo code" />
+            </div>
+            <div class="ps-bot">
+              <div class="more">
+                <h3>رمزك الترويجي</h3>
+                <p>صمم رمزك الترويجي الخاص اللي حتوزّعه على أهلك و عملائك</p>
               </div>
             </div>
             <span class="ps-sp-top"></span>
@@ -415,32 +400,20 @@
           </div>
           <div class="cons">
             <div class="img">
-              <img src="img/5.svg" alt="Acceptance Email" />
-            </div>
-            <div class="more">
-              <h3>رسالة القبول</h3>
-              <p>سيتم إرسال رسالة بحالة طلبك ورمزك الترويجي حال قبولك</p>
-            </div>
-          </div>
-          <div class="cons">
-            <div class="img">
-              <img src="img/6.svg" alt="Virtual Training" />
-            </div>
-            <div class="more">
-              <h3>دورة سريعة</h3>
-              <p>
-                يسعدنا انضمامك! سيتواصل بك زميلك لموعد دورة تدريبية يناسب وقتك،
-                تعرّفك على منتجاتنا وطرق بيعها.
-              </p>
-            </div>
-          </div>
-          <div class="cons">
-            <div class="img">
               <img src="img/7.svg" alt="Promo code" />
             </div>
             <div class="more">
               <h3>رمزك الترويجي</h3>
               <p>صمم رمزك الترويجي الخاص اللي حتوزّعه على أهلك و عملائك</p>
+            </div>
+          </div>
+          <div class="cons">
+            <div class="img">
+              <img src="img/5.svg" alt="Acceptance Email" />
+            </div>
+            <div class="more">
+              <h3>رسالة القبول</h3>
+              <p>سيتم إرسال رسالة بحالة طلبك ورمزك الترويجي حال قبولك</p>
             </div>
           </div>
           <div class="cons">
