--- a/expro.html
+++ b/expro.html
@@ -80,7 +80,7 @@
               </button>
             </div>
             <div class="sub-nav">
-              <button class="subnavbtn">
+              <button class="subnavbtn cta">
                 <a href="https://kash.york.com.sa/login" target="_blank"
                   >Sign in</a
                 >
@@ -340,33 +340,6 @@
           </li>
           <li>
             <div class="img-handler-top">
-              <img src="img/5.svg" alt="Acceptance Email" />
-            </div>
-            <div class="ps-bot">
-              <div class="more">
-                <h3>Acceptance Email</h3>
-                <p>
-                  An email with your application status will be sent along with
-                  your promo code when accepted.
-                </p>
-              </div>
-            </div>
-            <span class="ps-sp-top"></span>
-          </li>
-          <li>
-            <div class="img-handler-top">
-              <img src="img/6.svg" alt="Virtual Training" />
-            </div>
-            <div class="ps-bot">
-              <div class="more">
-                <h3>Virtual Training</h3>
-                <p>Short Quick Training session to learn about our program</p>
-              </div>
-            </div>
-            <span class="ps-sp-top"></span>
-          </li>
-          <li>
-            <div class="img-handler-top">
               <img src="img/7.svg" alt="Promo code" />
             </div>
             <div class="ps-bot">
@@ -375,6 +348,21 @@
                 <p>
                   Choose your own Promo Code to share with your family and
                   clients
+                </p>
+              </div>
+            </div>
+            <span class="ps-sp-top"></span>
+          </li>
+          <li>
+            <div class="img-handler-top">
+              <img src="img/5.svg" alt="Acceptance Email" />
+            </div>
+            <div class="ps-bot">
+              <div class="more">
+                <h3>Acceptance Email</h3>
+                <p>
+                  An email with your application status will be sent along with
+                  your promo code when accepted.
                 </p>
               </div>
             </div>
@@ -427,6 +415,17 @@
           </div>
           <div class="cons">
             <div class="img">
+              <img src="img/7.svg" alt="Promo code" />
+            </div>
+            <div class="more">
+              <h3>Promo code</h3>
+              <p>
+                Choose your own Promo Code to share with your family and clients
+              </p>
+            </div>
+          </div>
+          <div class="cons">
+            <div class="img">
               <img src="img/5.svg" alt="Acceptance Email" />
             </div>
             <div class="more">
@@ -434,26 +433,6 @@
               <p>
                 An email with your application status will be sent along with
                 your promo code when accepted.
-              </p>
-            </div>
-          </div>
-          <div class="cons">
-            <div class="img">
-              <img src="img/6.svg" alt="Virtual Training" />
-            </div>
-            <div class="more">
-              <h3>Virtual Training</h3>
-              <p>Short Quick Training session to learn about our program</p>
-            </div>
-          </div>
-          <div class="cons">
-            <div class="img">
-              <img src="img/7.svg" alt="Promo code" />
-            </div>
-            <div class="more">
-              <h3>Promo code</h3>
-              <p>
-                Choose your own Promo Code to share with your family and clients
               </p>
             </div>
           </div>
@@ -826,23 +805,6 @@
             <div class="input-box">
               <textarea required=""></textarea>
               <span class="tes">Message*</span>
-            </div>
-
-            <div class="input-box policy">
-              <div class="checkbox-wrap">
-                <div class="checkbox">
-                  <input
-                    type="checkbox"
-                    id="policy"
-                    name="policy"
-                    required=""
-                  />
-                  <label for="policy"
-                    >I agree to the terms and conditions
-                  </label>
-                  <div class="check"></div>
-                </div>
-              </div>
             </div>
             <div class="input-box">
               <input type="submit" value="Send" />
