--- a/expro-ar.html
+++ b/expro-ar.html
@@ -802,6 +802,7 @@
           </div>
         </div>
         <div class="bottom">
+          <p>تطبق <a href="#" target="_blank"> الشروط والاحكام</a></p>
           <p>© 2021 ال سالم جونسون كنترولز. جميع الحقوق محفوظة</p>
         </div>
       </div>
