--- a/expro.html
+++ b/expro.html
@@ -849,6 +849,7 @@
           </div>
         </div>
         <div class="bottom">
+          <p><a href="#" target="_blank"> Terms & Conditions</a> applied</p>
           <p>© 2021 AL SALEM JOHNSON CONTROLS. AL RIGHTS RESERVED.</p>
         </div>
       </div>
