--- a/expro-ar.html
+++ b/expro-ar.html
@@ -224,34 +224,36 @@
                 لاتفوتك الفرصة، خذلك فرّة على البرنامج!
               </p>
               <div class="play">
-                <div class="play-icon">
-                  <svg
-                    width="8px"
-                    height="10px"
-                    viewBox="0 0 8 10"
-                    version="1.1"
-                    xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink"
-                  >
-                    <g
-                      stroke="none"
-                      stroke-width="1"
-                      fill="none"
-                      fill-rule="evenodd"
+                <div class="plays">
+                  <div class="play-icon">
+                    <svg
+                      width="8px"
+                      height="10px"
+                      viewBox="0 0 8 10"
+                      version="1.1"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
                     >
                       <g
-                        transform="translate(-225.000000, -383.000000)"
-                        fill="#FFFFFF"
+                        stroke="none"
+                        stroke-width="1"
+                        fill="none"
+                        fill-rule="evenodd"
                       >
-                        <polygon
-                          transform="translate(229.000000, 388.000000) rotate(-270.000000) translate(-229.000000, -388.000000) "
-                          points="229 384 234 392 224 392"
-                        ></polygon>
+                        <g
+                          transform="translate(-225.000000, -383.000000)"
+                          fill="#FFFFFF"
+                        >
+                          <polygon
+                            transform="translate(229.000000, 388.000000) rotate(-270.000000) translate(-229.000000, -388.000000) "
+                            points="229 384 234 392 224 392"
+                          ></polygon>
+                        </g>
                       </g>
-                    </g>
-                  </svg>
+                    </svg>
+                  </div>
+                  <p>شاهد الفيديو</p>
                 </div>
-                <p>شاهد الفيديو</p>
                 <a href="https://kash.york.com.sa/register" target="_blank"
                   >انضم الآن</a
                 >
