--- a/expro.html
+++ b/expro.html
@@ -229,34 +229,36 @@
                 Learn more about the program!
               </p>
               <div class="play">
-                <div class="play-icon">
-                  <svg
-                    width="8px"
-                    height="10px"
-                    viewBox="0 0 8 10"
-                    version="1.1"
-                    xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink"
-                  >
-                    <g
-                      stroke="none"
-                      stroke-width="1"
-                      fill="none"
-                      fill-rule="evenodd"
+                <div class="plays">
+                  <div class="play-icon">
+                    <svg
+                      width="8px"
+                      height="10px"
+                      viewBox="0 0 8 10"
+                      version="1.1"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
                     >
                       <g
-                        transform="translate(-225.000000, -383.000000)"
-                        fill="#FFFFFF"
+                        stroke="none"
+                        stroke-width="1"
+                        fill="none"
+                        fill-rule="evenodd"
                       >
-                        <polygon
-                          transform="translate(229.000000, 388.000000) rotate(-270.000000) translate(-229.000000, -388.000000) "
-                          points="229 384 234 392 224 392"
-                        ></polygon>
+                        <g
+                          transform="translate(-225.000000, -383.000000)"
+                          fill="#FFFFFF"
+                        >
+                          <polygon
+                            transform="translate(229.000000, 388.000000) rotate(-270.000000) translate(-229.000000, -388.000000) "
+                            points="229 384 234 392 224 392"
+                          ></polygon>
+                        </g>
                       </g>
-                    </g>
-                  </svg>
+                    </svg>
+                  </div>
+                  <p>Watch Video</p>
                 </div>
-                <p>Watch Video</p>
                 <a href="https://kash.york.com.sa/register" target="_blank"
                   >Join Now</a
                 >
@@ -344,7 +346,7 @@
             </div>
             <div class="ps-bot">
               <div class="more">
-                <h3>Promo code</h3>
+                <h3>Promo Code</h3>
                 <p>
                   Choose your own Promo Code to share with your family and
                   clients
@@ -418,7 +420,7 @@
               <img src="img/7.svg" alt="Promo code" />
             </div>
             <div class="more">
-              <h3>Promo code</h3>
+              <h3>Promo Code</h3>
               <p>
                 Choose your own Promo Code to share with your family and clients
               </p>
