--- a/expro.html
+++ b/expro.html
@@ -212,7 +212,7 @@
     <!-- Hero -->
     <!-- Video -->
     <div class="video">
-      <video muted autoplay class="video-container" loop>
+      <video autoplay class="video-container" loop>
         <source src="img/video.mp4" type="video/mp4" />
       </video>
       <div class="wrapper">
