--- a/tips.html
+++ b/tips.html
@@ -78,6 +78,7 @@
     }
     .tips-watch .content {
       padding-top: 5%;
+      width: 100%;
     }
     .tips-watch .content::before {
       display: none;
@@ -275,6 +276,31 @@
     #player .player .vp-title {
       display: none !important;
     }
+    .tips-watch .wrap-video {
+      overflow: hidden;
+      background: url("imgs/york-video.png") center center no-repeat;
+      background-size: cover;
+      position: relative;
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+      min-width: 100%;
+      min-height: 100%;
+    }
+    .tips-watch .wrap-video:after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.1);
+    }
+    .tips-watch .wrapper {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
     @media screen and (max-width: 767px) {
       .join .content h3 {
         font-size: 22px;
@@ -395,9 +421,7 @@
 
     <!-- Video -->
     <div class="video tips-watch">
-      <video class="video-container" autoplay loop>
-        <source src="imgs/york-2.mp4" type="video/mp4" />
-      </video>
+      <div class="wrap-video"></div>
       <div class="wrapper">
         <div class="container">
           <div class="set-color">
