--- a/tips-ar.html
+++ b/tips-ar.html
@@ -386,7 +386,7 @@
       <div class="join">
         <div class="content">
           <h3>
-            بدع في نشر رمزك الترويجي بعدة طرق و على أكثر من موقع تواصل اجتماعي
+            1-بدع في نشر رمزك الترويجي بعدة طرق و على أكثر من موقع تواصل اجتماعي
           </h3>
         </div>
       </div>
@@ -437,7 +437,7 @@
       <!-- Join -->
       <div class="join tips-join">
         <div class="content">
-          <h3>تعرف أكثر على منتجاتنا عن طريق زيارة متجرنا الإلكتروني</h3>
+          <h3>2-تعرف أكثر على منتجاتنا عن طريق زيارة متجرنا الإلكتروني</h3>
           <br />
           <a
             href="https://york.com.sa/en/store"
@@ -523,7 +523,7 @@
       <!-- Join -->
       <div class="join">
         <div class="content">
-          <h3>الفيديو</h3>
+          <h3>3-شاهد فيديوهات برنامج KASH</h3>
         </div>
       </div>
       <!-- End Join -->
@@ -562,7 +562,7 @@
       <!-- Joins -->
       <div class="join">
         <div class="content">
-          <h3>شارك ممميزات رمزك الترويجي مع عملائك!</h3>
+          <h3>4-شارك ممميزات رمزك الترويجي مع عملائك!</h3>
         </div>
       </div>
       <!-- End Join -->
@@ -595,7 +595,7 @@
       <!-- Joins -->
       <div class="join">
         <div class="content">
-          <h3>أدوات تساعدك في زيادة مبيعاتك و عمولاتك؟</h3>
+          <h3>5-أدوات تساعدك في زيادة مبيعاتك و عمولاتك؟</h3>
         </div>
       </div>
       <!-- End Join -->
