--- a/tips-ar.html
+++ b/tips-ar.html
@@ -371,6 +371,18 @@
       .ar .video .content h1 {
         font-size: 20px;
       }
+      .tips-watch .content {
+        width: 100%;
+      }
+      .why.tips-us .content {
+        grid-template-columns: repeat(2, 1fr);
+      }
+      .why.tips-us .content .cons .img {
+        width: 50px;
+      }
+      .why.tips-us .content .cons .more h3 {
+        font-size: 16px;
+      }
     }
   </style>
   <body>
@@ -393,7 +405,7 @@
       <!-- End Join -->
 
       <!-- Why -->
-      <div class="why us">
+      <div class="why us tips-us">
         <div class="container">
           <div class="content">
             <div class="cons">
@@ -577,10 +589,7 @@
                 يقدر يحصل على خصم طوال السنة باستخدام رمزك الترويجي
               </p>
               <div class="cta">
-                <a
-                  href="https://mcusercontent.com/4013611385baeba5a8eb08ca5/images/a45cb738-223f-6517-6100-529e32d5168e.jpg"
-                  download
-                  target="_blank"
+                <a href="imgs/promo code.jpg" target="_blank" download
                   >تحميل الصورة</a
                 >
               </div>
