--- a/tips.html
+++ b/tips.html
@@ -347,6 +347,18 @@
       .tips-watch {
         height: 200px;
       }
+      .tips-watch .content {
+        width: 100%;
+      }
+      .why.tips-us .content {
+        grid-template-columns: repeat(2, 1fr);
+      }
+      .why.tips-us .content .cons .img {
+        width: 50px;
+      }
+      .why.tips-us .content .cons .more h3 {
+        font-size: 16px;
+      }
     }
   </style>
   <body>
@@ -366,7 +378,7 @@
     <!-- End Join -->
 
     <!-- Why -->
-    <div class="why us">
+    <div class="why us tips-us">
       <div class="container">
         <div class="content">
           <div class="cons">
@@ -544,10 +556,7 @@
               if available.
             </p>
             <div class="cta">
-              <a
-                href="https://mcusercontent.com/4013611385baeba5a8eb08ca5/images/a45cb738-223f-6517-6100-529e32d5168e.jpg"
-                download
-                target="_blank"
+              <a href="imgs/promo code" target="_blank" download
                 >Download Image</a
               >
             </div>
